--- a/index.html
+++ b/index.html
@@ -28,6 +28,101 @@
             padding: 15px;
             border-radius: 5px;
         }
+
+        .controls {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(0, 0, 0, 0.85);
+            padding: 20px;
+            border-radius: 12px;
+            color: white;
+            min-width: 250px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .controls h3 {
+            margin: 0 0 15px 0;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .control-group {
+            margin-bottom: 15px;
+        }
+
+        .control-group label {
+            display: block;
+            font-size: 12px;
+            margin-bottom: 5px;
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .control-group input[type="range"] {
+            width: 100%;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 2px;
+            outline: none;
+            -webkit-appearance: none;
+        }
+
+        .control-group input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 14px;
+            height: 14px;
+            background: white;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .preset-buttons {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 8px;
+            margin-top: 15px;
+        }
+
+        .preset-btn {
+            padding: 8px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 6px;
+            color: white;
+            cursor: pointer;
+            font-size: 11px;
+            transition: all 0.2s;
+        }
+
+        .preset-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(255, 255, 255, 0.4);
+        }
+
+        .value-display {
+            font-size: 11px;
+            color: rgba(255, 255, 255, 0.5);
+            text-align: right;
+        }
+
+        .toggle-controls {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(0, 0, 0, 0.85);
+            color: white;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 10px 16px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 12px;
+            backdrop-filter: blur(10px);
+        }
+
+        .toggle-controls:hover {
+            background: rgba(0, 0, 0, 0.95);
+        }
     </style>
 </head>
 <body>
@@ -45,6 +140,44 @@
 
 
     <script src="script.js"></script>
+
+    <div class="toggle-controls" onclick="toggleControls()">⚙️ Settings</div>
+
+    <div class="controls" id="controls" style="display: none;">
+        <h3>Flurry Controls</h3>
+        
+        <div class="control-group">
+            <label>Speed <span class="value-display" id="speed-val">1.0</span></label>
+            <input type="range" id="speed" min="0.1" max="3" step="0.1" value="1.0">
+        </div>
+
+        <div class="control-group">
+            <label>Particle Count <span class="value-display" id="count-val">8</span></label>
+            <input type="range" id="streams" min="4" max="16" step="1" value="8">
+        </div>
+
+        <div class="control-group">
+            <label>Trail Length <span class="value-display" id="trail-val">300</span></label>
+            <input type="range" id="trail" min="100" max="800" step="50" value="300">
+        </div>
+
+        <div class="control-group">
+            <label>Bloom Intensity <span class="value-display" id="bloom-val">1.5</span></label>
+            <input type="range" id="bloom" min="0" max="3" step="0.1" value="1.5">
+        </div>
+
+        <div class="control-group">
+            <label>Camera Distance <span class="value-display" id="camera-val">15</span></label>
+            <input type="range" id="camera" min="8" max="30" step="1" value="15">
+        </div>
+
+        <div class="preset-buttons">
+            <button class="preset-btn" onclick="applyPreset('classic')">Classic</button>
+            <button class="preset-btn" onclick="applyPreset('intense')">Intense</button>
+            <button class="preset-btn" onclick="applyPreset('gentle')">Gentle</button>
+            <button class="preset-btn" onclick="applyPreset('psychedelic')">Psychedelic</button>
+        </div>
+    </div>
 
 
 </body>
