made stream motion cleaner, added different presets

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         <div class="preset-buttons">
             <button class="preset-btn" onclick="applyPreset('classic')">Classic</button>
             <button class="preset-btn" onclick="applyPreset('intense')">Intense</button>
-            <button class="preset-btn" onclick="applyPreset('gentle')">Gentle</button>
-            <button class="preset-btn" onclick="applyPreset('psychedelic')">Psychedelic</button>
+            <button class="preset-btn" onclick="applyPreset('simple')">Simple</button>
+            <button class="preset-btn" onclick="applyPreset('chaotic')">Chaotic</button>
         </div>
     </div>
 
