--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
     <!-- imports -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noisejs/2.0.0/perlin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- new imports for bloom -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
@@ -141,7 +140,7 @@
 
     <script src="script.js"></script>
 
-    <div class="toggle-controls" onclick="toggleControls()">⚙️ Settings</div>
+    <div class="toggle-controls" onclick="toggleControls()">Settings</div>
 
     <div class="controls" id="controls" style="display: none;">
         <h3>Flurry Controls</h3>
@@ -174,7 +173,7 @@
         <div class="preset-buttons">
             <button class="preset-btn" onclick="applyPreset('classic')">Classic</button>
             <button class="preset-btn" onclick="applyPreset('intense')">Intense</button>
-            <button class="preset-btn" onclick="applyPreset('simple')">Simple</button>
+            <button class="preset-btn" onclick="applyPreset('multicolored')">Multicolored</button>
             <button class="preset-btn" onclick="applyPreset('chaotic')">Chaotic</button>
         </div>
     </div>
